# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1125 2013/05/15 02:17:57 jdhore Exp $

  15 May 2013; Jeff Horelick <jdhore@gentoo.org> gentoo-sources-3.8.13.ebuild:
  x86 stable wrt bug 469508 (and security bug 469854)

  14 May 2013; Tom Wijsman <TomWij@gentoo.org> ChangeLog:
  Linux patch 3.2.45. Removal of affected versions 3.0.74, 3.2.41, 3.2.42,
  3.2.43, 3.2.44, 3.4.34, 3.4.41, 3.6.11-r1, 3.6.11-r2; see bug #469854.

*gentoo-sources-3.4.45 (11 May 2013)
*gentoo-sources-3.8.13 (11 May 2013)
*gentoo-sources-3.0.78 (11 May 2013)

  11 May 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.0.78.ebuild,
  +gentoo-sources-3.4.45.ebuild, +gentoo-sources-3.8.13.ebuild:
  Linux patches 3.0.78, 3.4.45 and 3.8.13.

*gentoo-sources-3.9.2 (11 May 2013)

  11 May 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.9.2.ebuild:
  Linux patch 3.9.2.

*gentoo-sources-3.9.1-r1 (10 May 2013)

  10 May 2013; Tom Wijsman <TomWij@gentoo.org> +gentoo-sources-3.9.1-r1.ebuild,
  -gentoo-sources-3.0.35.ebuild, -gentoo-sources-3.0.69.ebuild,
  -gentoo-sources-3.0.70.ebuild, -gentoo-sources-3.0.71.ebuild,
  -gentoo-sources-3.0.72.ebuild, -gentoo-sources-3.0.73.ebuild,
  -gentoo-sources-3.2.40-r1.ebuild, -gentoo-sources-3.4.36.ebuild,
  -gentoo-sources-3.4.37.ebuild, -gentoo-sources-3.4.38.ebuild,
  -gentoo-sources-3.4.39.ebuild, -gentoo-sources-3.4.40.ebuild,
  -gentoo-sources-3.8.3-r1.ebuild, -gentoo-sources-3.8.4.ebuild,
  -gentoo-sources-3.8.5.ebuild, -gentoo-sources-3.8.6.ebuild,
  -gentoo-sources-3.8.7.ebuild, -gentoo-sources-3.8.8.ebuild:
  Revision bump for testing kernel 3.9.1, missing -N option when regerating
  patchset caused a missing file in the radeon uvd code patchset; will take
  preventive measures to not make this happen again in the future. As we're