@@ -29,18 +29,24 @@ EBUILD vanilla-sources-3.0.78.ebuild 590 SHA256 18e38447ac482e60e3cd38ce579a0502
 EBUILD vanilla-sources-3.2.44.ebuild 584 SHA256 3ef924df847c557a7bf113af67bc3b865f39df3fe7ee4f1089fae4a3103677bb SHA512 70cc9a3e75fc1b3c4dfec17cfbb35d54a863398258e1087fb4fb382163a82b3fc734bc4b3be8466b3e3365bf2326ca9a5d9f65b63a86bf5bf4e2c27435213011 WHIRLPOOL a651a5a33dc03e2b90070e182914543ec7344c8b04bcb21d623a61e03641fa6875cb2b0dcec840d72e514d8d6c9eb99d5f9744610b2f110f6484810e26106aa8
 EBUILD vanilla-sources-3.4.45.ebuild 590 SHA256 9b82a78679d5d40f3b915a910f2d1f5d9bb1d3dc700570577265830c8d1f09bf SHA512 4816c3365b2a48aa35c769e3526239bb988e95fb6cc32076f4877a6766dff6603eaffb9f59c26873aa0ceeb54910925cee2d161d16cfeb90580ee41827df74e6 WHIRLPOOL 9f14738b417e6c64017b402878c87ed4dbd51ea06fff71c06a65adc55b0baf77ada327432ff9ec5ab7f860b3cf9e8a34490dd778da68c64c49c6785d1539b7fe
 EBUILD vanilla-sources-3.7.10.ebuild 583 SHA256 756627327e72b727622b3625ac2cb256e88a8c4eb02923b14c8092bd656a3bb2 SHA512 0c23cfc006124232868cf45be0ac78f4d5d83766e0e1cda0ebc6f8d511b0f4859b9fcb30f851735acf3ea71b01f8ead2d0a416c55297142b617f47e1c46c4f49 WHIRLPOOL 6b123e2eeb2881943249a1d1f11f09b68c3c29f917d464afce27135e938c4c07395a074ab0823b39c3920bebc9d9ea53a4e626f8d2cf9e7ca78cf8ea9ea465f0
-EBUILD vanilla-sources-3.8.13.ebuild 592 SHA256 743f73791105d0170c401cd8804b5c8b05d1f5466369f4c29ca81236d691defa SHA512 b09d60d1beb15ceda405c254a731868bce2e97b4fa2b5d2b3f88a29b45b6645fee1d5b50cb6a3ddf9cb61ede3b9311cf0a3cdddc08227d3db6242a3100ca9a14 WHIRLPOOL 5590a78daa95457ceba44e1f27ab7a4945cd9d058f731ab78a9a9cd7ae4407ed9073d6fecaef749b5e05b72349e1d28d8f975f57706cda1f50dc5d08fda3d5d7
+EBUILD vanilla-sources-3.8.13.ebuild 588 SHA256 70e08c4f9fca58185cbd9f3f4c6ceca27a5586747e3ac8956acca068b9a29c0b SHA512 54645b4135473cc5b1b0c285f4021df89693726e31ab06d52c674994f52e8118183f1c120b1e0ca874a102b6d7543ce4afa45b2fcee3927abb9f1710ebbed448 WHIRLPOOL 669113e190dac35f162cf081d9347a3e14ffd02a6a493a1a8aaf4342d383d90c550319f9992791da527154897786a3fee44d7b9d0e66ecb14382ee5634422756
 EBUILD vanilla-sources-3.9.2.ebuild 589 SHA256 bb093f5c99d0c019f0b4a109abc171c5aa8c08be1d69c6c00a2b6952c8a5c971 SHA512 17dc0701a72dcce09474028db5f583a190831e0253a9e622a0e7acb7070c3066f08e5384cf45b115c47ef370bfc0dd5296e676312144db941c693a18ef065c50 WHIRLPOOL 9bece9965e02af80241f47e9e82c8895189547f91c0eabb107f3d72ec8b1cbbe32259f5a7f6466e98c007353cb69bb77ccbfa36333c2bff8890ed247d2c7e157
-MISC ChangeLog 85378 SHA256 0c4e55bee64749906ff5a00d44888527058534fb1da6aab10be6c2b44c74cabe SHA512 b8097e1fad9b6f01c1976f395291edccda50aed3f08edeb08b4ada4a4cdb3891d7982686ebb12798349beac675333ec87425a3de1a54e2d38d636ff3ed2ffbec WHIRLPOOL 2fbfb8dd45ecb7d4dc6446171965d0e55701d00082532c817cc2b52e962642d23cfefa0a5078e897fc8810823b481bb5ddf2858c27e2f74f1f83fd3696b81849
+MISC ChangeLog 85492 SHA256 71fa3d45abf43e12b7ab0bce5c37fdf445bf4394ff64236bc86a7554407baa74 SHA512 ac6a3051a0e7045785d1f403e66bb05b69a87feae5997aa62aaed77143e5460fa8d1fc7fee8d0752159cc8dfb66855b35333e5c74a94e97b5554f2a7afe00c3e WHIRLPOOL 0ae5f52eb2f672cb65a40389b09c772b36d3017455f07a47dcf9634ad0898b7750116c2bbb8fb6a31d1a9ad4cf9c2c074c06c99a5f47f497533b9400353d1066
 MISC metadata.xml 671 SHA256 4cc66bb08f286d43e3342dfee132b06e8778e78f7978099bbfe25350ab3a4b0a SHA512 14e3dcafa76242e0aa9e1cb0dd3abef896a257ad6cf2e8e31306f8aae159208936826e5cdc77981272f4fbfeeea8be97b9528ba3f3b4fd8da24dbe00e56f8f0a WHIRLPOOL db94ac9d12c4ec7b1daec1afa7e5925c5d873b54f4da6c1d068351c1ddaf40d8fec7a775b6fd8900e1fe6ada6d909ecb37a7b24ac923e3ab5d44e444bd9430ec
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJRkvBZAAoJEPUd7O0j6ekAXAMH/iPvt/2Q32XgIwlwV9qmGpxX
-ugyGlLfPL0xFlW5JDGh7HsXRojf8lzjgNlgj0eVEDS7C5n+AiDE2qU+Vzg3o/4XK
-+fM+4l30fncodPBELTZ0+N/vUXQmF8qoCWIZlPrD794sJtsmN/+ed8lprUwtfhx3
-ENRAlcDxyPmvZtJRMw933vGQiekaizB6f5xYCwagIKCSMp4WNQZJEagRXVBON8Qd
-gUPcpvBhcu+FqEdWSnsF7N/2h3WEWFnG8FTyY5f8xAL/CnJMk+C2sgYl6BH29sGr
-Zz1aC9uHbOsOOQJBZR2HBF240VvF3jQcXthZA9zFHfBaWVMf5ctJcs4LF7pFBh8=
-=AXFs
+iQIcBAEBCgAGBQJRk5zXAAoJELp701BxlEWfYTUQAI835vOmjr4RWx7NSBDm3/Rr
+C8E6ngl+wEoLRVL98ufCxCMzwpGxq0mjyrn1nlJ9b+CGtupBPhUK9eJ43MAGS2Yx
+SBbzpZx9+n2HBjuiWwzq8baObWVuJe2yyRt/6vFrU7+HPGQJmK1UkQJdW7MBWk8i
+fXZqk92b43aziNtt+i1uRaeghfrPYCmxGH3Jyb71JpTjWFfRkfvY30PcE66h1Y+t
+FnouPGu7EGiRdbLl0hfDgCklgvvAv/8HBDyQR/M90mRVWjosacKfw9Dlr8XDobZz
+f5o+nB67tmR0a3gkoKzeeuayEIShC4pmCzcf0xo60xkGSZc90TxCvyL8zcQ64+j7
+CpVJqJPMnGNOl5HXHUE9eF/V9YyZU82y3F7Ovz5ZV4FqRkMalAXDydiUiBfyYP9Q
+uhw5CGgxfVcscUYp2jM30qGxl6DRuXoidLjmN/g0bM9QZPbv8oW9PJmcDwg/yqrb
+q0yR8unzHuy+xL8Mpyr7Dp3eSqnFPEy3qpvfM+0xinKM0tIgPBBWK9WQml2r33n1
+uHAfMiNKHvwcjl4VtJkjDmpzOKLLFanbTsAJl6JjSUrEJUvmYtZNZzD8lNrDwI8H
+VN1CqDO/cEslBdGVMR0BCxslftcy5InP8bvfuLWv5j3D9hlIJhBzFot/BGTiVkFg
+ucPBdYwku0azMcQ6lV8i
+=Z1fO
 -----END PGP SIGNATURE-----
