@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1170 2013/05/15 02:17:59 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1171 2013/05/15 14:34:09 ago Exp $
+
+  15 May 2013; Agostino Sarubbo <ago@gentoo.org> vanilla-sources-3.8.13.ebuild:
+  Stable for amd64, wrt bug #469508
 
   15 May 2013; Jeff Horelick <jdhore@gentoo.org> vanilla-sources-3.8.13.ebuild:
   x86 stable wrt bug 469508 (and security bug 469854)
