@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1125 2013/05/15 02:17:57 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1126 2013/05/15 14:34:03 ago Exp $
+
+  15 May 2013; Agostino Sarubbo <ago@gentoo.org> gentoo-sources-3.8.13.ebuild:
+  Stable for amd64, wrt bug #469508
 
   15 May 2013; Jeff Horelick <jdhore@gentoo.org> gentoo-sources-3.8.13.ebuild:
   x86 stable wrt bug 469508 (and security bug 469854)
